compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_check_method_arg_count.snap
---
source: compiler/lume_typech/src/tests/query.rs
---
× error[LM4116]: argument count mismatch
   ╭───────────
 1 │ A::foo();
   ∶ ^^^^^^^^^ expected 1 arguments, but got 0
   ╰──
