compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_function_check_arg_count.snap
---
source: compiler/lume_typech/src/tests/query.rs
---
× error[LM4116]: argument count mismatch
   ╭───────────
 1 │ foo();
   │ ^^^^^^ expected 1 arguments, but got 0
   ╰──
