compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_function_check_type_arg_type_count.snap
---
source: compiler/lume_typech/src/tests/query.rs
---
× error[LM4119]: type argument mismatch
   ╭───────────
 1 │ foo();
   │ ^^^^^^ expected 1 type arguments, but got 0
   ╰──
