compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_lookup_functions_missing.snap
---
source: compiler/lume_typech/src/tests/query.rs
expression: err
---
MissingFunction {
    source: <internal>:0:0,
    function_name: Identifier {
        name: "foo",
        location: <internal>:0:0,
    },
    suggestions: [],
}
