compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_lookup_functions_suggestion_arg_count.snap
---
source: compiler/lume_typech/src/tests/query.rs
expression: err
---
MissingFunction {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "",
        package: PackageId(
            0,
        ),
    },
    range: 0..0,
    function_name: Identifier {
        name: "foo",
        location: <internal>:0:0,
    },
    suggestions: [
        SuggestedFunction {
            source: SourceFile {
                id: SourceFileId(
                    PackageId(
                        0,
                    ),
                    0,
                ),
                name: Internal,
                content: "fn foo(x: Int32) { }",
                package: PackageId(
                    0,
                ),
            },
            range: 3..6,
            function_name: Named(
                Identifier {
                    name: "foo",
                    location: <internal>:3:6,
                },
            ),
            reason: ArgumentCountMismatch,
        },
    ],
}
